<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="signupFragmentViewModel"
            type="com.sample.rosaperma.register.signup.SignupFragmentViewModel" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.signup.SignupFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/edit_text_margin_left_right_padding"
        android:id="@+id/signup_layout"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColorHint="@color/dark_grey"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUserName"
                android:hint="@string/username"
                android:inputType="textCapCharacters"
                android:maxLength="32"
                android:textAllCaps="true"
                android:text="@={signupFragmentViewModel.userName}"
                style="@style/EditTextDefault"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etMobileNumber"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/edit_text_left_right_padding"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editMobileNumber"
                android:hint="@string/mobilenumber"
                android:inputType="number"
                android:maxLength="10"
                android:text="@={signupFragmentViewModel.mobileNumber}"
                style="@style/EditTextDefault"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/edit_text_left_right_padding"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={signupFragmentViewModel.password}"
                android:maxLength="15"
                style="@style/EditTextDefault"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPasswordreenter"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/edit_text_left_right_padding"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPasswordreenter"
                android:hint="@string/newpassword_reenter"
                android:inputType="textPassword"
                android:text="@={signupFragmentViewModel.reenterPassword}"
                android:maxLength="15"
                style="@style/EditTextDefault"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etemailId"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/edit_text_left_right_padding"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editemailId"
                android:hint="@string/emailid"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:text="@={signupFragmentViewModel.emailId}"
                style="@style/EditTextDefault"/>
        </com.google.android.material.textfield.TextInputLayout>





        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:onClick="@{()-> signupFragmentViewModel.onSignUpClick()}"
            android:text="@string/signup"
            android:background="@drawable/button_onclick"
            style="@style/buttonDefault"
            />
    </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

</layout>