<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
        name="loginFragmentViewModel"
        type="com.sample.rosaperma.register.login.LoginFragmentViewModel" />
</data>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.login.LoginFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/edit_text_margin_left_right_padding"
    android:orientation="vertical">


      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/etMobileNumber"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:textColorHint="@color/dark_grey"
         >
          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/editMobileNumber"
              android:hint="@string/mobilenumber"
              android:inputType="number"
              android:maxLength="10"
              android:text="@={loginFragmentViewModel.mobileNumber}"
              style="@style/EditTextDefault"/>
      </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:textColorHint="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="15"
        android:layout_marginTop="@dimen/edit_text_margin_top_bottom_padding"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={loginFragmentViewModel.password}"
            style="@style/EditTextDefault"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:onClick="@{()-> loginFragmentViewModel.onLoginClick()}"
        android:text="@string/login"
        android:background="@drawable/button_onclick"
        style="@style/buttonDefault"
        />

    </LinearLayout>
</LinearLayout>

</layout>