<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:background="@color/white"
            app:cardUseCompatPadding="true"
            app:contentPadding="2dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimaryDark"
                >
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black000000"
                    android:textSize="16dp"
                    android:text="@string/memberlist"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:typeface="sans"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black000000"
                    android:textSize="14dp"
                    android:text="@string/uttar_pradesh"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:typeface="sans"
                    android:textStyle="normal
"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:text="@string/required"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:background="@color/white"
        app:cardUseCompatPadding="true"
        app:contentPadding="2dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
                tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:orientation="vertical"
         >

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black000000"
                    android:textSize="14sp"
                    android:text="@string/district"
                    android:paddingLeft="15dp"
                    android:paddingTop="20dp"
                    android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:text="*"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:typeface="sans" />
        </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/districtSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
               android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/post_name_list"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

            </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:background="@color/white"
            app:cardUseCompatPadding="true"
            app:contentPadding="2dp"
            android:id="@+id/block_cardview"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black000000"
                        android:textSize="14sp"
                        android:text="@string/block"
                        android:paddingLeft="15dp"
                        android:paddingTop="20dp"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:text="*"
                        android:paddingRight="10dp"
                        android:paddingTop="20dp"
                        android:typeface="sans" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/blockSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:entries="@array/post_name_list"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:background="@color/white"
            app:cardUseCompatPadding="true"
            app:contentPadding="2dp"
            android:id="@+id/panchayat_cardview"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black000000"
                        android:textSize="14sp"
                        android:text="@string/panchayat"
                        android:paddingLeft="15dp"
                        android:paddingTop="20dp"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:text="*"
                        android:paddingRight="10dp"
                        android:paddingTop="20dp"
                        android:typeface="sans" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/panchayatSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:entries="@array/post_name_list"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:background="@color/white"
            app:cardUseCompatPadding="true"
            app:contentPadding="2dp"
            android:id="@+id/villageSpinner_cardview"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black000000"
                        android:textSize="14sp"
                        android:text="@string/village"
                        android:paddingLeft="15dp"
                        android:paddingTop="20dp"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:text="*"
                        android:paddingRight="10dp"
                        android:paddingTop="20dp"
                        android:typeface="sans" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/villageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:entries="@array/post_name_list"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                style="@style/buttonDefault"
                android:text="@string/back"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:typeface="sans"
                android:textColor="@color/black000000"
                android:id="@+id/back"
                android:visibility="invisible"
                android:background="@drawable/button_back_onclick"> </Button>

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                style="@style/buttonDefault"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next"
                android:textSize="14sp"
                android:typeface="sans"
                android:id="@+id/submit"
                android:textStyle="bold"
                android:background="@drawable/button_onclick"> </Button>
        </LinearLayout>

    </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>